--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
+    <header>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+    </header>
 
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
   </body>
 </html>
