Header nav shop is ready

--- a/index.html
+++ b/index.html
@@ -5,15 +5,67 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
-    <header>
+    <header class="main-header">
+      <p class="logo">Device</p>
+      <div class="header-shop">
+        <input class="header-shop-search" type="search">
+        <nav class="nav-shop">
+          <ul class="nav-shop-list">
+            <li class="nav-shop-list-">Каталог товаров
+              <ul>
+                <li>
+                  <ul>
+                    <li><a href="#">Виртуальная реальность</a></li>
+                    <li><a href="#">Моноподы для селфи</a></li>
+                    <li><a href="#">Экшн-камеры</a></li>
+                  </ul>
+                </li>
+              </ul>
+              <ul>
+                <li>
+                  <ul>
+                    <li><a href="#">Фитнес-браслеты</a></li>
+                    <li><a href="#">Умные часы</a></li>
+                  </ul>
+                </li>
+              </ul>
+              <ul>
+                <li>
+                  <ul>
+                    <li><a href="#">Квадрокоптеры</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+          </ul>
 
+        </nav>
+      </div>
+<!--
+      <ul class="auth-list">
+        <li class="auth-item"></li>
+        <li class="auth-item"></li>
+      </ul>
+
+
+
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <li class="main-nav-item"></li>
+          <li class="main-nav-item"></li>
+          <li class="main-nav-item"></li>
+          <li class="main-nav-item"></li>
+          <li class="main-nav-item"></li>
+        </ul>
+      </nav>
+-->
     </header>
 
-    <main>
+    <main class="container">
 
     </main>
 
-    <footer>
+    <footer class="main-footer">
 
     </footer>
   </body>
