Header basic markup

--- a/index.html
+++ b/index.html
@@ -2,63 +2,47 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
     <header class="main-header">
-      <p class="logo">Device</p>
-      <div class="header-shop">
-        <input class="header-shop-search" type="search">
-        <nav class="nav-shop">
-          <ul class="nav-shop-list">
-            <li class="nav-shop-list-">Каталог товаров
-              <ul>
-                <li>
-                  <ul>
-                    <li><a href="#">Виртуальная реальность</a></li>
-                    <li><a href="#">Моноподы для селфи</a></li>
-                    <li><a href="#">Экшн-камеры</a></li>
-                  </ul>
-                </li>
-              </ul>
-              <ul>
-                <li>
-                  <ul>
-                    <li><a href="#">Фитнес-браслеты</a></li>
-                    <li><a href="#">Умные часы</a></li>
-                  </ul>
-                </li>
-              </ul>
-              <ul>
-                <li>
-                  <ul>
-                    <li><a href="#">Квадрокоптеры</a></li>
-                  </ul>
-                </li>
+      <h1 class="header-title logo"><a href="#">Device</a></h1>
+      <nav class="main-navigaiton">
+        <div class="user-navigaiton">
+          <input class="header-shop-search" type="search">
+          <ul class="user-auth">
+            <li><a href="#">Валентин Петухов</a></li>
+            <li><a href="#">Выйти</a></li>
+          </ul>
+          <ul class="user-shopping">
+            <li><a href="#">Сравнить</a></li>
+            <li><a href="#">Корзина</a></li>
+          </ul>
+        </div>
+
+        <div class="site-navigaiton">
+          <ul class="header-catalog">
+            <li>Каталог товаров
+              <ul class="catalog-menu">
+                <li><a href="#">Виртуальная реальность</a></li>
+                <li><a href="#">Моноподы для селфи</a></li>
+                <li><a href="#">Экшн-камеры</a></li>
+                <li><a href="#">Фитнес-браслеты</a></li>
+                <li><a href="#">Умные часы</a></li>
+                <li><a href="#">Квадрокоптеры</a></li>
               </ul>
             </li>
           </ul>
-
-        </nav>
-      </div>
-<!--
-      <ul class="auth-list">
-        <li class="auth-item"></li>
-        <li class="auth-item"></li>
-      </ul>
-
-
-
-      <nav class="main-nav">
-        <ul class="main-nav-list">
-          <li class="main-nav-item"></li>
-          <li class="main-nav-item"></li>
-          <li class="main-nav-item"></li>
-          <li class="main-nav-item"></li>
-          <li class="main-nav-item"></li>
-        </ul>
+          <ul class="shop-info">
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Гарантия</a></li>
+          </ul>
+          <ul class="shop-contacts">
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </div>
       </nav>
--->
     </header>
 
     <main class="container">
