--- a/index.html
+++ b/index.html
@@ -7,40 +7,48 @@
   </head>
   <body>
     <header class="main-header">
-      <h1 class="header-title logo"><a href="#">Device</a></h1>
+      <p class="header-title logo"><a href="#">Device</a></p>
+
       <nav class="main-navigaiton">
-        <div class="user-navigaiton">
-          <input class="header-shop-search" type="search">
-          <ul class="user-auth">
-            <li><a href="#">Валентин Петухов</a></li>
-            <li><a href="#">Выйти</a></li>
-          </ul>
-          <ul class="user-shopping">
-            <li><a href="#">Сравнить</a></li>
-            <li><a href="#">Корзина</a></li>
-          </ul>
+        <div class="navigaiton-user">
+          <div class="navigation-leftpane">
+            <input class="header-shop-search" type="search">
+          </div>
+          <div class="navigation-rightpane">
+            <ul class="user-auth">
+              <li><a href="#">Валентин Петухов</a></li>
+              <li><a href="#">Выйти</a></li>
+            </ul>
+            <ul class="user-shopping">
+              <li><a href="#">Сравнить</a></li>
+              <li><a href="#">Корзина</a></li>
+            </ul>
+          </div>
         </div>
 
-        <div class="site-navigaiton">
-          <ul class="header-catalog">
-            <li>Каталог товаров
-              <ul class="catalog-menu">
-                <li><a href="#">Виртуальная реальность</a></li>
-                <li><a href="#">Моноподы для селфи</a></li>
-                <li><a href="#">Экшн-камеры</a></li>
-                <li><a href="#">Фитнес-браслеты</a></li>
-                <li><a href="#">Умные часы</a></li>
-                <li><a href="#">Квадрокоптеры</a></li>
-              </ul>
-            </li>
-          </ul>
-          <ul class="shop-info">
-            <li><a href="#">Доставка</a></li>
-            <li><a href="#">Гарантия</a></li>
-          </ul>
-          <ul class="shop-contacts">
-            <li><a href="#">Контакты</a></li>
-          </ul>
+        <div class="navigaiton-site">
+          <div class="navigation-leftpane">
+            <ul class="site-catalog">
+              <li>
+                <h3 class="catalog-title">Каталог товаров</h3>
+                <ul class="catalog-list">
+                  <li><a href="#">Виртуальная реальность</a></li>
+                  <li><a href="#">Моноподы для селфи</a></li>
+                  <li><a href="#">Экшн-камеры</a></li>
+                  <li><a href="#">Фитнес-браслеты</a></li>
+                  <li><a href="#">Умные часы</a></li>
+                  <li><a href="#">Квадрокоптеры</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+          <div class="navigation-rightpane">
+            <ul class="site-menu">
+              <li><a href="#">Доставка</a></li>
+              <li><a href="#">Гарантия</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+          </div>
         </div>
       </nav>
     </header>
