--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
+
+    <!-- Шапка сайта -->
+
     <header class="main-header">
       <p class="header-title logo"><a href="#">Device</a></p>
 
+      <!-- Интерактивный блок -->
+
       <nav class="main-navigaiton">
         <div class="navigaiton-user">
-          <div class="navigation-leftpane">
+          <div class="navigation-col-left">
             <input class="header-shop-search" type="search">
           </div>
-          <div class="navigation-rightpane">
+          <div class="navigation-col-right">
             <ul class="user-auth">
               <li><a href="#">Валентин Петухов</a></li>
               <li><a href="#">Выйти</a></li>
@@ -26,11 +31,13 @@
           </div>
         </div>
 
+        <!-- Блок навигации по сайту -->
+
         <div class="navigaiton-site">
-          <div class="navigation-leftpane">
+          <div class="navigation-col-left">
             <ul class="site-catalog">
               <li>
-                <h3 class="catalog-title">Каталог товаров</h3>
+                <p class="catalog-title">Каталог товаров</p>
                 <ul class="catalog-list">
                   <li><a href="#">Виртуальная реальность</a></li>
                   <li><a href="#">Моноподы для селфи</a></li>
@@ -42,7 +49,7 @@
               </li>
             </ul>
           </div>
-          <div class="navigation-rightpane">
+          <div class="navigation-col-right">
             <ul class="site-menu">
               <li><a href="#">Доставка</a></li>
               <li><a href="#">Гарантия</a></li>
@@ -53,9 +60,22 @@
       </nav>
     </header>
 
+
+
+
+    <!-- Главный раздел страницы-->
+
     <main class="container">
+      <p>
+        
+      </p>
+
+
+      <h1 class="main-title">Магазин цифровой техники «Девайс»</h1>
 
     </main>
+
+    <!-- Подвал сайта -->
 
     <footer class="main-footer">
 
