Promo section added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <ul class="site-catalog">
               <li>
                 <p class="catalog-title">Каталог товаров</p>
-                <ul class="catalog-list">
+                <ul class="catalog-menu">
                   <li><a href="#">Виртуальная реальность</a></li>
                   <li><a href="#">Моноподы для селфи</a></li>
                   <li><a href="#">Экшн-камеры</a></li>
@@ -60,18 +60,65 @@
       </nav>
     </header>
 
-
-
-
     <!-- Главный раздел страницы-->
 
     <main class="container">
-      <p>
-        
-      </p>
-
-
       <h1 class="main-title">Магазин цифровой техники «Девайс»</h1>
+      <section class="promo">
+        <button class="control">Первый слайд</button>
+        <button class="control">Второй слайд</button>
+        <button class="control">Третий слайд</button>
+        <ul class="promo-slider">
+          <li class="promo-item">
+            <p class="lead"><b>Делай селфи, как Бен Стиллер!</b></p>
+            <img class="promo-product" alt="Палка для селфи">
+            <p class="desc">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+            <table>
+              <tr>
+                <th>Длина палки</th>
+                <th>Вес палки</th>
+                <th>Материал</th>
+              </tr>
+              <tr>
+                <td>8,5 м</td>
+                <td>5 кг</td>
+                <td>Карбон</td>
+              </tr>
+            </table>
+            <a class="more" href="#">Подробнее</a>
+          </li>
+          <li class="promo-item">
+            <p class="lead"><b>Худеем правильно!</b></p>
+            <img class="promo-product" alt="Фитнес-браслет">
+            <p class="desc">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+            <table>
+              <tr>
+                <th>Без подзарядки</th>
+              </tr>
+              <tr>
+                <td>48 часов</td>
+              </tr>
+            </table>
+            <a class="more" href="#">Подробнее</a>
+          </li>
+          <li class="promo-item">
+            <p class="lead"><b>Порхает как бабочка, жалит как пчела!</b></p>
+            <img class="promo-product" alt="Квадрокоптер">
+            <p class="desc">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+            <table>
+              <tr>
+                <th>Дальность полета</th>
+                <th>Радиус поражения</th>
+              </tr>
+              <tr>
+                <td>800 м</td>
+                <td>50 м</td>
+              </tr>
+            </table>
+            <a class="more" href="#">Подробнее</a>
+          </li>
+        </ul>
+      </section>
 
     </main>
 
