Promo section changed

--- a/index.html
+++ b/index.html
@@ -65,13 +65,9 @@
       <!-- Промо-раздел -->
       
       <section class="promo">
-        <ul class="promo-controls">
-          <li><button class="btn control-promo">Первый слайд</button></li>
-          <li><button class="btn control-promo">Второй слайд</button></li>
-          <li><button class="btn control-promo">Третий слайд</button></li>
-        </ul>
-        <ul class="promo-slider">
+        <ul class="promo-list">
           <li class="promo-item">
+            <button class="btn control-promo">Первый слайд</button>
             <p class="lead"><b>Делай селфи, как Бен Стиллер!</b></p>
             <img class="promo-product" alt="Палка для селфи">
             <p class="desc">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
@@ -90,6 +86,7 @@
             <a class="more" href="#">Подробнее</a>
           </li>
           <li class="promo-item">
+            <button class="btn control-promo">Второй слайд</button>
             <p class="lead"><b>Худеем правильно!</b></p>
             <img class="promo-product" alt="Фитнес-браслет">
             <p class="desc">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
@@ -104,6 +101,7 @@
             <a class="more" href="#">Подробнее</a>
           </li>
           <li class="promo-item">
+            <button class="btn control-promo">Третий слайд</button>
             <p class="lead"><b>Порхает как бабочка, жалит как пчела!</b></p>
             <img class="promo-product" alt="Квадрокоптер">
             <p class="desc">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
