Some visual corrections

--- a/catalog.html
+++ b/catalog.html
@@ -33,7 +33,11 @@
     </header>
     <main class="container">
       <h1 class="page-title">Моноподы для селфи</h1>
-      <p class="breadcrumbs"><a href="index.html">Главная</a> &gt; <a href="#">Каталог товаров</a> &gt; <a href="#">Моноподы для селфи</a></p>
+      <p class="breadcrumbs">
+        <a href="index.html">Главная</a> &gt;
+        <a href="#">Каталог товаров</a> &gt;
+        <a href="#">Моноподы для селфи</a>
+      </p>
 
       <section class="sidebar">
         <p>Фильтр:</p>
