Links and buttons changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="main-header">
-      <a class="header-logo">Device</a>
+      <a class="main-header-logo">DEVICE</a>
       <nav class="site-navigaiton">
         <!-- здесь будет форма поиска-->
         <ul class="user-navigation">
@@ -157,13 +157,13 @@
     </main>
     
     <footer class="main-footer">
-      <a class="footer-logo">Device</a>
+      <a class="main-footer-logo">DEVICE</a>
       <p>г. Москва, ул. Строителей, 15</p>
       <p>Тел.: +7 (495) 495-95-95</p>
       <ul class="user-navigation">
-        <li><a href="#">Войти</a></li>
-        <li><a href="#">Сравнить</a></li>
-        <li><a href="#">Корзина</a></li>
+        <li class="login-link" href="#">Войти</li>
+        <li class="compare-link">Сравнить</li>
+        <li class="cart-link">Корзина</li>
       </ul>
       <ul class="footer-navigaiton">
         <li><a href="">Доставка</a></li>
