--- a/catalog.html
+++ b/catalog.html
@@ -10,12 +10,12 @@
       <nav class="site-navigaiton">
         <!-- здесь будет форма поиска-->
         <ul class="user-auth">
-          <li class="profile-link" href="#">Валентин Петухов</li>
-          <li class="logout-link" href="#">Выйти</li>
+          <li class="user-auth-item" href="#">Валентин Петухов</li>
+          <li class="user-auth-item" href="#">Выйти</li>
         </ul>
         <ul class="user-shopping">
-          <li class="compare-link">Сравнить</li>
-          <li class="cart-link">Корзина</li>
+          <li class="user-shopping-item">Сравнить</li>
+          <li class="user-shopping-item">Корзина</li>
         </ul>
         <ul class="shop-navigation">
           <li><a href="catalog.html">Каталог товаров</a>
@@ -65,40 +65,46 @@
         <h2 class="visually-hidden">Список моноподов</h2>
         <ul class="catalog-list">
           <li class="catalog-item">
+            <img class="product-image" src="http://placehold.it/150x100" alt="Любительская селфи-палка">
             <h3 class="product-title">
               <a href="#">Любительская селфи-палка</a>
             </h3>
-            <img class="product-image" src="http://placehold.it/150x100" alt="Любительская селфи-палка">
             <span class="product-price">500 руб.</span>
           </li>
           <li class="catalog-item">
+            <img class="product-image" src="http://placehold.it/150x100" alt="Профессиональная селфи-палка">
             <h3 class="product-title">
               <a href="#">Профессиональная селфи-палка</a>
             </h3>
-            <img class="product-image" src="http://placehold.it/150x100" alt="Профессиональная селфи-палка">
             <span class="product-price">1500 руб.</span>
           </li>
           <li class="catalog-item">
+            <img class="product-image" src="http://placehold.it/150x100" alt="Непотопляемая селфи-палка">
             <h3 class="product-title">
               <a href="#">Непотопляемая селфи-палка</a>
             </h3>
-            <img class="product-image" src="http://placehold.it/150x100" alt="Непотопляемая селфи-палка">
             <span class="product-price">2500 руб.</span>
           </li>
           <li class="catalog-item">
+            <img class="product-image" src="http://placehold.it/150x100" alt="Селфи-палка «Следуй за мной»">
             <h3 class="product-title">
               <a href="#">Селфи-палка «Следуй за мной»</a>
             </h3>
-            <img class="product-image" src="http://placehold.it/150x100" alt="Селфи-палка «Следуй за мной»">
             <span class="product-price">4900 руб.</span>
           </li>
         </ul>
       </section>
       <div class="pagination">
         <ul class="pagination-list">
-          <li class="pagination-item-current"><a class="btn btn-pagination btn-pagination-page1">1</a></li>
-          <li class="pagination-item"><a class="btn btn-pagination btn-pagination-page2">2</a></li>
-          <li class="pagination-item"><a class="btn btn-pagination btn-pagination-page3">3</a></li>
+          <li class="pagination-item-current">
+            <a class="btn btn-pagination btn-pagination-page1" href="#">1</a>
+          </li>
+          <li class="pagination-item">
+            <a class="btn btn-pagination btn-pagination-page2" href="#">2</a>
+          </li>
+          <li class="pagination-item">
+            <a class="btn btn-pagination btn-pagination-page3" href="#">3</a>
+          </li>
         </ul>
         <span class="btn btn-pagination btn-pagination-backward">Назад</span>
         <span class="btn btn-pagination btn-pagination-forward">Вперед</span>
@@ -109,11 +115,13 @@
       <a class="main-footer-logo">DEVICE</a>
       <p>г. Москва, ул. Строителей, 15</p>
       <p>Тел.: +7 (495) 495-95-95</p>
-      <ul class="user-navigation">
-        <li class="login-link" href="#">Валентин Петухов</li>
-        <li class="logout-link" href="#">Выйти</li>
-        <li class="compare-link">Сравнить</li>
-        <li class="cart-link">Корзина</li>
+      <ul class="user-auth">
+        <li class="user-auth-item" href="#">Валентин Петухов</li>
+        <li class="user-auth-item" href="#">Выйти</li>
+      </ul>
+      <ul class="user-shopping">
+        <li class="user-shopping-item">Сравнить</li>
+        <li class="user-shopping-item">Корзина</li>
       </ul>
       <ul class="footer-navigaiton">
         <li><a href="">Доставка</a></li>
