Image pack correction

--- a/catalog.html
+++ b/catalog.html
@@ -137,7 +137,7 @@
         <li><a href="#" class="social">Twitter</a></li>
       </ul>
       <a class="footer-copyright" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
-        <img class="copyright-logo" src="img/logo-html.png" alt="HTML Academy | Интенсивный онлайн‑курс Профессиональный HTML и CSS, уровень 1" width="27" height="35">
+        <img class="copyright-logo" src="img/logo-html.svg" alt="HTML Academy | Интенсивный онлайн‑курс Профессиональный HTML и CSS, уровень 1" width="27" height="35">
       </a>
     </footer>
   </body>
