--- a/catalog.html
+++ b/catalog.html
@@ -50,13 +50,23 @@
       <div class="sorting">
         <span class="denotion sorting-denotion">Сортировка:</span>
         <ul class="sorting-type-list">
-          <li class="sotring-type-current"><a class="btn btn-sorting btn-sorting-price">По цене</a></li>
-          <li><a class="btn btn-sorting btn-sorting-type">По типу</a></li>
-          <li><a class="btn btn-sorting btn-sorting-rating">По популяности</a></li>
+          <li class="sotring-type-current">
+            <a class="btn btn-sorting btn-sorting-price">По цене</a>
+          </li>
+          <li>
+            <a class="btn btn-sorting btn-sorting-type">По типу</a>
+          </li>
+          <li>
+            <a class="btn btn-sorting btn-sorting-rating">По популяности</a>
+          </li>
         </ul>
         <ul class="sorting-direction-list">
-          <li class="sorting-direction-current"><a class="btn btn-sorting btn-sorting-increasing">По возрастанию</a></li>
-          <li><a class="btn btn-sorting btn-sorting-decreasing">По убыванию</a></li>
+          <li class="sorting-direction-current">
+            <a class="btn btn-sorting btn-sorting-increasing">По возрастанию</a>
+          </li>
+          <li>
+            <a class="btn btn-sorting btn-sorting-decreasing">По убыванию</a>
+          </li>
         </ul>
       </div>
       
@@ -64,28 +74,36 @@
         <h2 class="visually-hidden">Список моноподов</h2>
         <ul class="catalog-list">
           <li class="catalog-item">
-            <img class="product-image" src="img/item-1.jpg" alt="Любительская селфи-палка" width="360" height="380">
-            <h3 class="product-title">
+            <img class="catalog-item-image" src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
+            <span class="btn btn-catalog btn-catalog-cart">В корзину</span>
+            <span class="btn btn-catalog btn-catalog-compare">Добавить к сравнению</span>
+            <h3 class="catalog-item-title">
               <a href="#">Любительская селфи-палка</a>
             </h3>
             <span class="product-price">500 руб.</span>
           </li>
           <li class="catalog-item">
-            <img class="product-image" src="img/item-2.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
+            <img class="product-image" src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
+            <span class="btn btn-catalog btn-catalog-cart">В корзину</span>
+            <span class="btn btn-catalog btn-catalog-compare">Добавить к сравнению</span>
             <h3 class="product-title">
               <a href="#">Профессиональная селфи-палка</a>
             </h3>
             <span class="product-price">1500 руб.</span>
           </li>
           <li class="catalog-item">
-            <img class="product-image" src="img/item-3.jpg" alt="Непотопляемая селфи-палка" width="360" height="380">
+            <img class="product-image" src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+            <span class="btn btn-catalog btn-catalog-cart">В корзину</span>
+            <span class="btn btn-catalog btn-catalog-compare">Добавить к сравнению</span>
             <h3 class="product-title">
               <a href="#">Непотопляемая селфи-палка</a>
             </h3>
             <span class="product-price">2500 руб.</span>
           </li>
           <li class="catalog-item">
-            <img class="product-image" src="img/item-4.jpg" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
+            <img class="product-image" src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+            <span class="btn btn-catalog btn-catalog-cart">В корзину</span>
+            <span class="btn btn-catalog btn-catalog-compare">Добавить к сравнению</span>
             <h3 class="product-title">
               <a href="#">Селфи-палка «Следуй за мной»</a>
             </h3>
@@ -137,7 +155,7 @@
         <li><a href="#" class="social">Twitter</a></li>
       </ul>
       <a class="footer-copyright" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
-        <img class="copyright-logo" src="img/logo-html.svg" alt="HTML Academy | Интенсивный онлайн‑курс Профессиональный HTML и CSS, уровень 1" width="27" height="35">
+        <img class="copyright-logo" src="img/logo-html.svg" width="27" height="35" alt="HTML Academy | Интенсивный онлайн‑курс Профессиональный HTML и CSS, уровень 1">
       </a>
     </footer>
   </body>
