--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="main-header">
-      <p class="main-header-logo">DEVICE</p>
+      <a class="main-header-logo">DEVICE</a>
       <nav class="site-navigation">
         <!-- здесь будет форма поиска-->
         <ul class="user-auth">
@@ -44,7 +44,7 @@
         <span class="btn btn-promo btn-promo-slide3">Слайд 3</span>
         <ul class="promo-list">
           <li class="promo-item">
-            <img class="promo-image" src="img/slider-1.png" alt="Палка для селфи" width="384" height="486">
+            <img class="promo-image" src="img/slider-1.png" width="384" height="486" alt="Палка для селфи">
             <p class="promo-lead">Делай селфи, как Бен Стиллер!</p>
             <p class="desc promo-desc">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
             <table>
@@ -54,15 +54,15 @@
                 <td>Карбон</td>
               </tr>
               <tr>
-                <th>Длина палки</th>
-                <th>Вес палки</th>
-                <th>Материал</th>
+                <td>Длина палки</td>
+                <td>Вес палки</td>
+                <td>Материал</td>
               </tr>
             </table>
             <a class="btn more" href="#">Подробнее</a>
           </li>
           <li class="promo-item">
-            <img class="promo-image" src="img/slider-2.png" alt="Фитнес-браслет" width="345" height="485">
+            <img class="promo-image" src="img/slider-2.png" width="345" height="485" alt="Фитнес-браслет">
             <p class="promo-lead">Худеем правильно!</p>
             <p class="desc promo-desc">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
             <table>
@@ -70,13 +70,13 @@
                 <td>48 часов</td>
               </tr>
               <tr>
-                <th>Без подзарядки</th>
+                <td>Без подзарядки</td>
               </tr>
             </table>
             <a class="btn more" href="#">Подробнее</a>
           </li>
           <li class="promo-item">
-            <img class="promo-image" src="img/slider-3.png" alt="Квадрокоптер" width="526" height="334">
+            <img class="promo-image" src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер">
             <p class="promo-lead">Порхает как бабочка, жалит как пчела!</p>
             <p class="desc promo-desc">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
             <table>
@@ -85,8 +85,8 @@
                 <td>50 м</td>
               </tr>
               <tr>
-                <th>Дальность полета</th>
-                <th>Радиус поражения</th>
+                <td>Дальность полета</td>
+                <td>Радиус поражения</td>
               </tr>
             </table>
             <a class="btn more" href="#">Подробнее</a>
@@ -97,12 +97,42 @@
       <section class="popular">
         <h2 class="visually-hidden">Популярные товары</h2>
         <ul class="popular-list">
-          <li class="popular-item"><a href="#">Виртуальная реальность</a></li>
-          <li class="popular-item"><a href="#">Моноподы для селфи</a></li>
-          <li class="popular-item"><a href="#">Экшн-камеры</a></li>
-          <li class="popular-item"><a href="#">Фитнес-браслеты</a></li>
-          <li class="popular-item"><a href="#">Умные часы</a></li>
-          <li class="popular-item"><a href="#">Квадрокоптеры</a></li>
+          <li class="popular-item">
+            <a href="#">
+              <img class="popular-image" src="img/popular-1.svg" width="97" height="55" alt="Виртуальная реальность">
+              <p>Виртуальная реальность</p>
+            </a>
+            </li>
+          <li class="popular-item">
+            <a href="#">
+              <img class="popular-image" src="img/popular-2.svg" width="86" height="117" alt="Моноподы для селфи">
+              <p>Моноподы для селфи</p>
+            </a>
+          </li>
+          <li class="popular-item">
+            <a href="#">
+              <img class="popular-image" src="img/popular-3.svg" width="71" height="87" alt="Экшн-камеры">
+              <p>Экшн-камеры</p>
+            </a>
+          </li>
+          <li class="popular-item">
+            <a href="#">
+              <img class="popular-image" src="img/popular-4.svg" width="107" height="65" alt="Фитнес-браслеты">
+              <p>Фитнес-браслеты</p>
+            </a>
+          </li>
+          <li class="popular-item">
+            <a href="#">
+              <img class="popular-image" src="img/popular-5.svg" width="56" height="97" alt="Умные часы">
+              <p>Умные часы</p>
+            </a>
+          </li>
+          <li class="popular-item">
+            <a href="#">
+              <img class="popular-image" src="img/popular-6.svg" width="132" height="69" alt="Квадрокоптеры">
+              <p>Квадрокоптеры</p>
+            </a>
+          </li>
         </ul>
       </section>
       
@@ -131,16 +161,16 @@
         <h2 class="logotypes-title">Бренды</h2>
         <ul class="logotypes-list">
           <li class="logotypes-item">
-            <img src="img/logo-1.png" alt="Бренд 1" width="260" height="100">
+            <img src="img/logo-1.png" width="260" height="100" alt="Бренд 1">
           </li>
           <li class="logotypes-item">
-            <img src="img/logo-2.png" alt="Бренд 2" width="260" height="100">
+            <img src="img/logo-2.png" width="260" height="100" alt="Бренд 2">
           </li>
           <li class="logotypes-item">
-            <img src="img/logo-3.png" alt="Бренд 3" width="260" height="100">
+            <img src="img/logo-3.png" width="260" height="100" alt="Бренд 3">
           </li>
           <li class="logotypes-item">
-            <img src="img/logo-4.png" alt="Бренд 4" width="260" height="100">
+            <img src="img/logo-4.png" width="260" height="100" alt="Бренд 4">
           </li>
         </ul>
       </section>
@@ -163,7 +193,7 @@
           <p class="desc reference-desc reference-contact-desc">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
           <figure class="map">
             <a href="#">
-              <img src="img/map.png" alt="Карта офиса по адресу улица Строителей, 15" width="560" height="222">
+              <img src="img/map.png" width="560" height="222" alt="Карта офиса по адресу улица Строителей, 15">
             </a>
           </figure>
           <a class="btn btn-reference btn-reference-contact" href="#">Напишите нам</a>
@@ -194,7 +224,7 @@
         <li><a href="#" class="social">Twitter</a></li>
       </ul>
       <a class="footer-copyright" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
-        <img class="copyright-logo" src="img/logo-html.svg" alt="HTML Academy | Интенсивный онлайн‑курс Профессиональный HTML и CSS, уровень 1" width="27" height="35">
+        <img class="copyright-logo" src="img/logo-html.svg" width="27" height="35" alt="HTML Academy | Интенсивный онлайн‑курс Профессиональный HTML и CSS, уровень 1">
       </a>
     </footer>
     
